2016-04-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Update reference system and add apt-get line suggested by
	Christian Fischer.

2016-01-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Make a better distinction between hardening flags for compiling and
	for linking to avoid using flags in a context where they make no
	sense.

	* CMakeLists.txt: Separate linker hardening flags from compiler
	hardening flags.

	* winexe/CMakeLists.txt, wmi/CMakeLists.txt: Use linker hardening
	flags when linking.

2015-08-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* winexe/CMakeLists.txt, wmi/CMakeLists.txt: Add .map files as library
	sources and not as dependency between targets since the files are
	static and there is no target providing the files.

2015-08-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* winexe/CMakeLists.txt: Add proper checks and flags for glib usage.

2015-08-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* winexe/wincmd.c: Include glib.h since g_malloc0 is used.

2015-08-24  Michael Wiegand <michael.wiegand@greenbone.net>

	* winexe/CMakeLists.txt, wmi/CMakeLists.txt: Remove superfluous
	linking against libresolv.

	* CMakeLists.txt: Use SEND_ERROR instead of FATAL_ERROR for
	consistency.

2015-07-30  Sven Haardiek <sven.haardiek@greenbone.net>

	* CMakeLists.txt: Change non release version style to fit better to debian

2015-07-13  Michael Wiegand <michael.wiegand@greenbone.net>

	* samba/auth/auth_sam_reply.c (auth_convert_server_info_sambaseinfo):
	Correct redundant assignment as suggested by Miguel Angel Cabrera
	Moya.

2015-04-15  Andre Heinecke <aheinecke@greenbone.net>

	Fix heimdal detection for RHEL Systems.

	* cmake/FindGSSAPI.cmake: Check for heimdal-krb5-config.

2015-03-16  Andre Heinecke <aheinecke@greenbone.net>

	Use mv -f to move generated tables file to tables.c

	* samba/CMakeLists.txt: Use mv -f.

2015-03-13  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.
